feat: :lipstick: new style front

--- a/FrontEnd/src/pages/Login.css
+++ b/FrontEnd/src/pages/Login.css
@@ -46,6 +46,16 @@
   height: auto;
 }
 
+
+.login-logo-top {
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 110px;
+  height: auto;
+}
+
 /* ===============================
    LOGO TEXTO (WATER MARKET)
 ================================ */
